install(
  DIRECTORY ispd2005 DESTINATION thirdparty/DREAMPlace/unittest/regression
    )

install(
  DIRECTORY ispd2015 DESTINATION thirdparty/DREAMPlace/unittest/regression
    )

install(
  DIRECTORY ispd2018 DESTINATION thirdparty/DREAMPlace/unittest/regression
    )

install(
  DIRECTORY ispd2019 DESTINATION thirdparty/DREAMPlace/unittest/regression
    )

install(
  DIRECTORY iccad2014 DESTINATION thirdparty/DREAMPlace/unittest/regression
    )

install(
  DIRECTORY iccad2015.ot DESTINATION thirdparty/DREAMPlace/unittest/regression
    )

